--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,107 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Автомобили под заказ из Японии, Кореи и Китая">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Автомобили под заказ из Японии, Кореи и Китая"
+    />
+    <link rel="shortcut icon" href="./img/favicon.svg" type="image/x-icon" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz@0,14..32;1,14..32&display=swap"
+      rel="stylesheet"
+    />
     <title>AUTOCENTER</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header class="header center">
+      <a class="header__logo" href="index.html"
+        ><img src="./img/logo.svg" alt="Логотип AUTOCENTER"
+      /></a>
+      <div class="header__nav-box">
+        <nav class="header__nav">
+          <a class="header__link" href="#">Авто из Японии</a>
+          <a class="header__link" href="#">Авто из Китая</a>
+          <a class="header__link" href="#">Авто из Кореи</a>
+          <div class="header__wrap">
+            <div class="header__inner">
+              <p class="header__link title-list">О нас</p>
+              <svg
+                class="header__icon"
+                width="11.000549"
+                height="6.000732"
+                viewBox="0 0 11.0005 6.00073"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+              >
+                <path
+                  id="Vector"
+                  d="M10.85 0.85L5.85 5.85C5.8 5.9 5.75 5.93 5.69 5.96C5.63 5.98 5.56 6 5.5 6C5.43 6 5.36 5.98 5.3 5.96C5.24 5.93 5.19 5.9 5.14 5.85L0.14 0.85C0.05 0.76 0 0.63 0 0.5C0 0.36 0.05 0.24 0.14 0.14C0.24 0.05 0.36 0 0.5 0C0.63 0 0.76 0.05 0.85 0.14L5.5 4.79L10.14 0.14C10.19 0.1 10.24 0.06 10.3 0.03C10.36 0.01 10.43 0 10.5 0C10.56 0 10.63 0.01 10.69 0.03C10.75 0.06 10.8 0.1 10.85 0.14C10.9 0.19 10.93 0.24 10.96 0.3C10.98 0.36 11 0.43 11 0.5C11 0.56 10.98 0.63 10.96 0.69C10.93 0.75 10.9 0.8 10.85 0.85Z"
+                  fill-opacity="1.000000"
+                  fill-rule="nonzero"
+                />
+              </svg>
+            </div>
+            <ul class="header__list hide">
+              <li><a class="header__list-link" href="#">Компания</a></li>
+              <li><a class="header__list-link" href="#">Отзывы</a></li>
+              <li><a class="header__list-link" href="#">Контакты</a></li>
+            </ul>
+          </div>
+        </nav>
+        <nav class="header__nav-social">
+          <a href="#">
+            <svg
+              class="header__icon-social"
+              width="24.000000"
+              height="24.000000"
+              viewBox="0 0 24 24"
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+            >
+              <defs />
+              <path
+                id="Subtract"
+                d="M0.238098 23.9382C0.103455 23.8635 0.0022583 23.6936 0 23.5381C-0.000915527 23.4756 0.425354 22.3169 0.947327 20.9631L1.89624 18.5017L1.74286 18.2373C1.46069 17.751 0.898254 16.5701 0.722839 16.0957C0.499512 15.4915 0.219116 14.3726 0.111389 13.6553C0.00683594 12.959 -0.00939941 11.1555 0.0830688 10.5107C0.481567 7.73218 1.63135 5.3855 3.51971 3.49683C5.40619 1.60986 7.78259 0.44165 10.5087 0.0612793C11.0947 -0.0205078 12.9258 -0.0205078 13.5117 0.0612793C17.0223 0.55127 20.0076 2.38794 21.9526 5.25439C22.9832 6.77319 23.6111 8.40454 23.913 10.3464C24.0181 11.0234 24.031 12.8696 23.9351 13.5144C23.527 16.2561 22.3415 18.655 20.4808 20.5051C17.5792 23.3896 13.4504 24.5886 9.40607 23.7209C8.38141 23.501 6.84406 22.8909 5.88696 22.324L5.6524 22.1851L3.11859 23.0923C1.72504 23.5913 0.532043 23.9998 0.467529 24C0.403015 24.0002 0.299805 23.9724 0.238098 23.9382ZM17.1943 17.1743C16.8536 17.5112 16.5048 17.7261 16.0377 17.8872C15.6009 18.0378 14.8201 18.0779 14.3563 17.9734C13.2753 17.73 11.6201 16.8716 10.2037 15.8201C8.86542 14.8264 7.7132 13.3823 6.75391 11.4966C6.00952 10.0332 5.81201 9.09961 6.04987 8.16943C6.3114 7.14673 7.11786 6.30249 8.11255 6.01001C8.29315 5.95679 8.56122 5.93506 9.0329 5.93506C9.6394 5.93506 9.70959 5.94385 9.82452 6.03418C9.90436 6.09717 10.1608 6.5498 10.5223 7.26636L11.094 8.39893L11.0924 8.79785C11.0909 9.15454 11.0732 9.23413 10.9255 9.54883C10.8346 9.74268 10.6205 10.074 10.4498 10.2854L10.1395 10.6699L10.3597 11.1091C10.9321 12.2507 11.7766 13.085 12.9452 13.6636L13.3408 13.8594L13.6097 13.6165C14.1773 13.1042 14.7424 12.8579 15.2712 12.8923C15.5792 12.9126 15.6699 12.9492 16.7258 13.4788C17.3452 13.7893 17.8942 14.0903 17.9458 14.1475C18.0286 14.2393 18.0414 14.3301 18.0547 14.9209C18.0687 15.542 18.0609 15.6165 17.9457 15.9597C17.7834 16.4434 17.5466 16.8262 17.1943 17.1743Z"
+                clip-rule="evenodd"
+                fill-rule="evenodd"
+              />
+            </svg>
+          </a>
+          <a href="#">
+            <svg
+              class="header__icon-social"
+              width="24.000000"
+              height="24.000000"
+              viewBox="0 0 24 24"
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+            >
+              <defs />
+              <path
+                id="Subtract"
+                d="M12 24C18.6274 24 24 18.6274 24 12C24 5.37256 18.6274 0 12 0C5.37256 0 0 5.37256 0 12C0 18.6274 5.37256 24 12 24ZM12.4301 8.85913C11.2628 9.34448 8.93011 10.3494 5.43188 11.8735C4.86383 12.0994 4.56628 12.3203 4.53918 12.5364C4.49341 12.9016 4.95068 13.0454 5.57349 13.2412C5.6582 13.2678 5.74597 13.2954 5.83594 13.3247C6.44861 13.5239 7.27283 13.7568 7.70129 13.7661C8.08997 13.7747 8.52374 13.6143 9.00262 13.2854Q13.9054 9.97607 14.0643 9.93994C14.139 9.92285 14.2426 9.90161 14.3127 9.96387C14.3829 10.0264 14.376 10.1445 14.3686 10.176C14.3091 10.4294 11.2388 13.2222 11.0621 13.4058C10.968 13.5034 10.8721 13.5959 10.78 13.6848C10.2108 14.2334 9.78394 14.645 10.8036 15.3169C11.8288 15.9924 12.4255 16.4236 13.4816 17.1157C13.6221 17.2078 13.7562 17.3035 13.8869 17.3967C14.3841 17.7512 14.8307 18.0696 15.3826 18.0188C15.7032 17.9893 16.0345 17.6877 16.2027 16.7886C16.6002 14.6633 17.3817 10.0586 17.5622 8.16113C17.5781 7.99487 17.5581 7.78198 17.5422 7.68872C17.5262 7.59521 17.4927 7.46216 17.3713 7.36377C17.2276 7.24707 17.0056 7.22241 16.9064 7.22412C16.455 7.23218 15.7626 7.4729 12.4301 8.85913Z"
+                clip-rule="evenodd"
+                fill-opacity="1.000000"
+                fill-rule="evenodd"
+              />
+            </svg>
+          </a>
+        </nav>
+        <div class="header__box">
+          <a class="header__phone" href="tel:+71234567890">+7 123 456 78 90</a>
+          <p class="header__text">Звонок по РФ бесплатный</p>
+        </div>
+      </div>
+      <div class="header__burger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </header>
+  </body>
 </html>
