--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz@0,14..32;1,14..32&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
     <title>AUTOCENTER</title>
@@ -103,5 +103,22 @@
         <span></span>
       </div>
     </header>
+    <main>
+      <section class="main centerMargin">
+        <div>
+          <h1 class="main__title">
+            Авто из Японии, Кореи и Китая с выгодой до 30% ниже рынка РФ
+          </h1>
+          <p class="main__text">
+            Высокий сервис для клиентов, от заключения договора до
+            выдачи/отправки авто.
+          </p>
+          <button type="button" class="btn main__btn">
+            Рассчитать стоимость
+          </button>
+        </div>
+        <img class="main__img" src="./img/main.png" alt="Машины" />
+      </section>
+    </main>
   </body>
 </html>
